--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,7 @@
 # Maven
+- task: build-task@1
+  inputs:
+    OctaneService: 'Octane'
 # Build your Java project and run tests with Apache Maven.
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
